--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="Zlatan Ibrahimović" content="fanpage for Zlatan Ibrahimović fans">
+    <meta name="keywords" content="love Zlatan Ibrahimović, football, Milan">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Zlatan Ibrahimović</title>
 </head>
 <body>
     <h1>hello world</h1>
