--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <title>Zlatan Ibrahimović</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <header>
+        <a href="index.html">
+            <h1>Zlatan Ibrahimović</h1>
+        </a>
+        <nav>
+            <ul>
+            <li> <a href="index.html">home</a></li>
+            <li> <a href="#">gallery</a></li>
+            <li> <a href="#">sign up</a></li>
+            </ul>
+        </nav>
+    </header>
     <section>
         main images
     </section>
