--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Zlatan Ibrahimović</h1>
+            <h1 id="logo">Zlatan Ibrahimović</h1>
         </a>
         <nav>
             <ul>
