added image that zooms in

--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
             <h1 id="logo">Zlatan Ibrahimović</h1>
         </a>
         <nav>
-            <ul>
-            <li> <a href="index.html">home</a></li>
-            <li> <a href="#">gallery</a></li>
+            <ul id="menu">
             <li> <a href="#">sign up</a></li>
+            <li> <a href="#">gallery</a></li>
+            <li> <a href="index.html" class="active">home</a></li>
+            
             </ul>
         </nav>
     </header>
-    <section>
-        main images
+    <section id="zlatan-outer">
+        <div id="zlatan-image"></div>
+        
     </section>
 
     <section>
