add cover text and style

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     </header>
     <section id="zlatan-outer">
         <div id="zlatan-image"></div>
-        
+        <div id="cover-text">
+            <h2>Love football </h2>
+            <h3>Milan & Giuseppe Meazza-stadium</h3>
+        </div>
     </section>
 
     <section>
