--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </a>
         <nav>
             <ul id="menu">
-            <li> <a href="#">sign up</a></li>
-            <li> <a href="#">gallery</a></li>
+            <li> <a href="#">awards</a></li>
+            <li> <a href="#">teams</a></li>
             <li> <a href="index.html" class="active">home</a></li>
             
             </ul>
@@ -26,7 +26,7 @@
     <section id="zlatan-outer">
         <div id="zlatan-image"></div>
         <div id="cover-text">
-            <h2>Love football </h2>
+            <h2>zlatan-fanpage </h2>
             <h3>Milan & Giuseppe Meazza-stadium</h3>
         </div>
     </section>
